--- a/css/aula1.css
+++ b/css/aula1.css
@@ -1,4 +1,11 @@
 h1{
-    color: rgb(2, 2, 2);
-    background-color: blueviolet;
+    color: rgb(5, 5, 5);
+}
+
+body{
+    background-color: #56FF4B;
+}
+
+p{
+    color: blueviolet;
 }
